# astrakairos

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  locations.json  main.py  pyproject.toml  test_main_improvements.py
.github/workflows/: ci.yml
astrakairos/: config.py  exceptions.py
astrakairos/analyzer/: cli.py  decision_tree.py  engine.py  reporting.py  workflows.py
astrakairos/cli/: main.py
astrakairos/core/: calculations.py  models.py  odi.py  utils.py
astrakairos/data/: gaia_source.py  gaia_utils.py  local_source.py  online_source.py  source.py  validators.py  web_source.py
astrakairos/gui/: main_app.py
astrakairos/physics/: dynamics.py  el_badry_rix_2018.py  kepler.py  masses.py
astrakairos/planner/: README.md  calculations.py  gui.py  locations.json
astrakairos/planner/gui/: __init__.py  calculation_widgets.py  data_export.py  location_widgets.py  main_app.py  search_widgets.py  utilities.py
astrakairos/utils/: coordinate_parsing.py  io.py
core/: astronomy.py  catalogs.py
data_catalogs/: technique_calibration.json
docs/: MIGRATION_GUIDE.md
original-code/analyzer/: README.md  main.py
original-code/planner/: LICENSE
scripts/: convert_catalogs_to_sqlite.py  prefetch_gaia_data.py
scripts/conversion_tool/: crossmatching.py  database.py  parsers.py  pipeline.py  summary.py
scripts/core-scripts/: build_database.py  prefetch_gaia_data.py  train_rf_model.py
scripts/ml-training/: train_ml_model4.py
scripts/validation-scripts/: test_rf_model.py
tests/: __init__.py  test_analyzer_cli.py  test_config.py  test_conversion_tool.py  test_convert_catalogs.py  test_coordinate_parsing.py  test_data_gaia_source.py  test_data_local_source.py  test_data_local_source_fixed.py  test_data_source.py  test_el_badry_integration.py  test_gui_utilities.py  test_io.py  test_main.py  test_online_source.py  test_physics_dynamics.py  test_physics_kepler.py  test_physics_masses.py  test_planner_calculations.py  test_planner_gui.py  test_sqlite_source.py  test_utils_io.py  test_validators.py  test_web_data_source.py  test_workflows.py
tests/sample_data/: BU_773_AB.html  orb6_sample.txt  wds_sample.txt
