[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrakairos"
version = "0.1.0"
authors = [
    { name="Martín Rubina Scapini", email="mrubina@usm.cl" },
]
description = "AstraKairos is a scientific Python framework that bridges the gap between massive astronomical catalogs (like Gaia) and practical night-to-night observation, enabling researchers to find and prioritize the most scientifically valuable targets."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "pandas",
    "aiohttp",
    "beautifulsoup4",
    "pyephem",
    "pytz",
    "astroquery"
]

[project.scripts]
astrakairos-analyze = "astrakairos.analyzer.cli:main"

[project.gui-scripts]
astrakairos-plan = "astrakairos.planner.gui:main"