[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrakairos"
version = "1.0.0"
authors = [
    { name="Martín Rubina Scapini", email="mrubina@usm.cl" },
]
description = "Binary star research assistant for observation planning and data analysis"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Astrophysics :: Binary Stars",
]
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "skyfield>=1.40",
    "pytz>=2021.1",
    "astropy>=4.0",
    "astroquery>=0.4.0",
    "scipy",
    "scikit-learn"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.scripts]
astrakairos = "main:main"
astrakairos-analyze = "astrakairos.analyzer.cli:main"

[project.gui-scripts]
astrakairos-gui = "astrakairos.planner.gui:main"

[project.urls]
Homepage = "https://github.com/AstraKairos/astrakairos"
Repository = "https://github.com/AstraKairos/astrakairos"
Documentation = "https://github.com/AstraKairos/astrakairos#readme"
"Bug Reports" = "https://github.com/AstraKairos/astrakairos/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests as requiring a network connection",
    "slow: marks tests as slow running",
]
addopts = "--strict-markers --strict-config"

[tool.setuptools.packages.find]
where = ["."]
include = ["astrakairos*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"